--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.6",
     "axios": "^1.7.7",
-    "husky": "^9.1.6",
     "jwt-decode": "^4.0.0",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
@@ -35,9 +34,13 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
-    "husky": "^8.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.10",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.13.0",
     "vite": "^5.4.10"
+  },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx}": "eslint"
   }
 }
