--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.6",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "front-end": "file:",
     "jwt-decode": "^4.0.0",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
